@@ -2,10 +2,17 @@ If you are updating from a previous version make sure every update info from
 the version your are updating from is done.
 
 ## version 2. - Dragon Chapel
-+ Added query debug setting to config file.
++ Add query debug setting to config file.
   See config.default.php for QUERY_DEBUG constant. Add it to your local config.php
-+ Added log file path constant to config file.
++ Add log file path constant to config file.
   See config.default.php for LOGFILE constant. Add it to your local config.php
++ Update your tables with the following SQL statements. Replace #REPLACE_ME# with your current table prefix.
+ALTER TABLE `#REPLACE_ME#_link` ADD INDEX (`created`);
+ALTER TABLE `#REPLACE_ME#_link` ADD INDEX (`status`);
+ALTER TABLE `#REPLACE_ME#_categoryrelation` ADD INDEX (`categoryid`);
+ALTER TABLE `#REPLACE_ME#_tagrelation` ADD UNIQUE `tagid` (`linkid`, `tagid`);
+ALTER TABLE `#REPLACE_ME#_tagrelation` ADD INDEX (`linkid`);
+ALTER TABLE `#REPLACE_ME#_category` ADD INDEX (`name`);
 
 ## version 2.8.1 - Deathwind
 + Added debug setting into config. See config.default.php for DEBUG constant.
